--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prestart": "tsc",
+    "prestart": "./node_modules/.bin/tsc",
     "start": "node out/index.js"
   },
   "repository": {
