--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/brechtbilliet/WineCellarBackend/issues"
   },
   "homepage": "https://github.com/brechtbilliet/WineCellarBackend#readme",
-  "devDependencies": {
+  "dependencies": {
     "typescript": "1.8.2",
     "typings": "0.6.8"
   }
