--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/brechtbilliet/WineCellarBackend#readme",
   "dependencies": {
+    "bcrypt": "0.8.5",
     "body-parser": "1.15.0",
     "controllers.ts": "0.3.0",
+    "cors": "2.7.1",
     "express": "4.13.4",
+    "jsonwebtoken": "5.7.0",
     "mongodb": "2.1.7",
     "mongoose": "4.4.5",
     "typescript": "1.8.2",
