--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "5.7.0",
     "mongodb": "2.1.7",
     "mongoose": "4.4.5",
+    "socket.io": "1.4.8",
     "typescript": "1.8.2",
     "typings": "0.6.8"
   }
